--- a/public/landing-page-assets/css/style.css
+++ b/public/landing-page-assets/css/style.css
@@ -725,11 +725,12 @@ ol {
 }
 
 .review-text p {
-	font-size: 22px;
+	font-size: 16px;
 }
 
 .review-text-slider .owl-nav {
-	padding-top: 15px;
+	padding-top: 5px;
+	text-align: center;
 }
 
 .review-text-slider .owl-prev,
